--- a/index.html
+++ b/index.html
@@ -296,110 +296,117 @@ $${}^Cn_j, d_j (j=1,2,3)$$ : The orientations and distances of the three mirrors
 <p>This code requires OpenCV 2.3. We used libcv-dev package in <a href="http://packages.debian.org/en/wheezy/libcv-dev">Debian wheezy</a>. For Debian/Ubuntu, try</p>
 
 <pre><code> $ sudo apt-get -f install libcv-dev libcvaux-dev libhighgui-dev g++ make
-``
-to install requisite libraries and compilation tools, and then exec
 </code></pre>
 
-<p>$ make</p>
+<p>to install requisite libraries and compilation tools, and then exec</p>
 
-<pre><code>to compile the code.
-
-For Visual C++ on Windows, please simply import `demo.cc`, `sub_solveP3P.h`, and `tnm.h` into a new project, and compile it (you need to setup additional include path and libraries for Op
-enCV, of course).
-
-Once compiled, run the binary (named `demo`) with no args in the `./tnm-opencv` directory.
+<pre><code> $ make
 </code></pre>
 
-<p>$ ./demo
+<p>to compile the code.</p>
+
+<p>For Visual C++ on Windows, please simply import <code>demo.cc</code>, <code>sub_solveP3P.h</code>, and <code>tnm.h</code> into a new project, and compile it (you need to setup additional include path and libraries for Op
+enCV, of course).</p>
+
+<p>Once compiled, run the binary (named <code>demo</code>) with no args in the <code>./tnm-opencv</code> directory.</p>
+
+<pre><code> $ ./demo
  loading 'data/input1.txt' = [263.854279, 284.595978;
    380.608337, 284.673645;
-   261.375946, 355.315582]</p>
+   261.375946, 355.315582]
 
-<p>loading 'data/input2.txt' = [187.462204, 264.845764;
+ loading 'data/input2.txt' = [187.462204, 264.845764;
    302.664276, 261.313538;
-   183.416656, 338.876984]</p>
+   183.416656, 338.876984]
 
-<p>loading 'data/input3.txt' = [393.80719, 301.828278;
+ loading 'data/input3.txt' = [393.80719, 301.828278;
    529.568542, 311.569794;
-   391.23999, 374.259766]</p>
+   391.23999, 374.259766]
 
-<p>loading 'data/model.txt' = [0, 0, 0;
+ loading 'data/model.txt' = [0, 0, 0;
    175, 0, 0;
-   0, 100, 0]</p>
+   0, 100, 0]
 
-<p>loading 'data/camera.txt' = [487.910797, 0, 324.31308;
+ loading 'data/camera.txt' = [487.910797, 0, 324.31308;
    0, 487.558441, 237.003937;
-   0, 0, 1]</p>
+   0, 0, 1]
 
-<p>Average reprojection error by TNM : 0.353531 pixels</p>
 
-<p>==== Parameters by TNM ====</p>
+ Average reprojection error by TNM : 0.353531 pixels
 
-<p>R  = [0.9552278293542109, -0.0315692738655991, -0.2941822138995512;
+ ==== Parameters by TNM ====
+
+ R  = [0.9552278293542109, -0.0315692738655991, -0.2941822138995512;
    0.02622804982091903, 0.9994120031779081, -0.02208477544627536;
-   0.294706436016986, 0.01338016634873504, 0.9554941589139341]</p>
+   0.294706436016986, 0.01338016634873504, 0.9554941589139341]
 
-<p>T  = [71.67155976406129; 84.34036742140127; 120.2696306131992]</p>
+ T  = [71.67155976406129; 84.34036742140127; 120.2696306131992]
 
-<p>n1 = [0.2679446927390354; 0.03066392138399924; -0.9629461903753189]</p>
+ n1 = [0.2679446927390354; 0.03066392138399924; -0.9629461903753189]
 
-<p>n2 = [0.4356434955333516; 0.08437398428883026; -0.8961561111629551]</p>
+ n2 = [0.4356434955333516; 0.08437398428883026; -0.8961561111629551]
 
-<p>n3 = [-0.04427539436835728; -0.01119106464381498; -0.9989566805050478]</p>
+ n3 = [-0.04427539436835728; -0.01119106464381498; -0.9989566805050478]
 
-<p>d1 = 386.23</p>
+ d1 = 386.23
 
-<p>d2 = 355.048</p>
+ d2 = 355.048
 
-<p>d3 = 404.707</p>
+ d3 = 404.707
+</code></pre>
 
-<pre><code>
-This program automatically loads data from `data/input{1,2,3}.txt`, and then outputs the estimated parameters to stdout.
+<p>This program automatically loads data from <code>data/input{1,2,3}.txt</code>, and then outputs the estimated parameters to stdout.</p>
 
-## Brief descriptions of the code
+<h2>
+<a id="brief-descriptions-of-the-code-1" class="anchor" href="#brief-descriptions-of-the-code-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief descriptions of the code</h2>
 
-The structure of the code is very straightforward. Please visit the `main()` function in `demo.cc` first. The flow of `main()` is:
-1. load data from files (`model.txt`, `input{1,2,3}.txt`) by `load()` function defined in `demo.cc`.
-2. run calibration by `tnm()` function defined in tnm.h. What this function does inside is:
-2.1. call `sub_solveP3P()` defined in `sub_solveP3P.h` for each input data (= the Matlab function in `tnm-matlab/sub_p3p.m`),
-2.2. call `sub_tnm_orth()` defined in `tnm.h` (= the Matlab function in `tnm-matlab/sub_tnm_orth.m`), and
-2.3. call `sub_tnm_rt()` defined in `tnm.h` (= the Matlab function in `tnm-matlab/sub_tnm_rt.m`).
-3. run `sub_reproj()` defined in `demo.cc` to evaluate the reprojection error (= the Matlab function in `tnm-matlab/sub_reproj.m`).
+<p>The structure of the code is very straightforward. Please visit the <code>main()</code> function in <code>demo.cc</code> first. The flow of <code>main()</code> is:
+1. load data from files (<code>model.txt</code>, <code>input{1,2,3}.txt</code>) by <code>load()</code> function defined in <code>demo.cc</code>.
+2. run calibration by <code>tnm()</code> function defined in tnm.h. What this function does inside is:
+2.1. call <code>sub_solveP3P()</code> defined in <code>sub_solveP3P.h</code> for each input data (= the Matlab function in <code>tnm-matlab/sub_p3p.m</code>),
+2.2. call <code>sub_tnm_orth()</code> defined in <code>tnm.h</code> (= the Matlab function in <code>tnm-matlab/sub_tnm_orth.m</code>), and
+2.3. call <code>sub_tnm_rt()</code> defined in <code>tnm.h</code> (= the Matlab function in <code>tnm-matlab/sub_tnm_rt.m</code>).
+3. run <code>sub_reproj()</code> defined in <code>demo.cc</code> to evaluate the reprojection error (= the Matlab function in <code>tnm-matlab/sub_reproj.m</code>).</p>
 
-So to re-use the code for your own project, copy `tnm.h` and `sub_solveP3P.h`, and then use `tnm()` for calibration. To understand how to prepare the data, please consult the `load()` f
-unction in `demo.cc`.
+<p>So to re-use the code for your own project, copy <code>tnm.h</code> and <code>sub_solveP3P.h</code>, and then use <code>tnm()</code> for calibration. To understand how to prepare the data, please consult the <code>load()</code> f
+unction in <code>demo.cc</code>.</p>
 
-# How to use the code with your own data
+<h1>
+<a id="how-to-use-the-code-with-your-own-data" class="anchor" href="#how-to-use-the-code-with-your-own-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use the code with your own data</h1>
 
-To calibrate your own system, please follow the process below. In short, update `data/model.txt` and `data/input{1,2,3}.txt`, then run the program again.
+<p>To calibrate your own system, please follow the process below. In short, update <code>data/model.txt</code> and <code>data/input{1,2,3}.txt</code>, then run the program again.
 1. Suppose you have a reference object $$X$$ and a camera $$C$$.
 1.1. The intrinsic parameters of $$C$$ should be provided. You can use OpenCV to estimate them.
 2. Capture three images of $$X$$ as $$I_1, I_2, I_3$$ via mirrors $$\pi_1, \pi_2, \pi_3$$ under different poses.
 3. Detect three points of $$X$$ for each of the images ($$I_1, I_2, I_3$$).
 3.1. Here we assume that the images are rectified (undistorted) using the intrinsic parameters before the detection.
-3.2. If you used a chessboard pattern as $$X$$ and used OpenCV [findChessboardCorners()](http://docs.opencv.org/modules/calib3d/doc/camera_calibration_and_3d_reconstruction.html#findch
-essboardcorners) to detect it in $$I_1, I_2, I_3$$ automatically, you need to **flip** the detection result because the detector does not account for the observation via mirror.
-4. Store the data into `data/model.txt` and `data/input{1,2,3}.txt`.
-4.1. `data/model.txt` is a line-oriented plain text file each of lines represents the 3D position of a reference point in $$X$$.
-</code></pre>
+3.2. If you used a chessboard pattern as $$X$$ and used OpenCV <a href="http://docs.opencv.org/modules/calib3d/doc/camera_calibration_and_3d_reconstruction.html#findch%0Aessboardcorners">findChessboardCorners()</a> to detect it in $$I_1, I_2, I_3$$ automatically, you need to <strong>flip</strong> the detection result because the detector does not account for the observation via mirror.
+4. Store the data into <code>data/model.txt</code> and <code>data/input{1,2,3}.txt</code>.
+4.1. <code>data/model.txt</code> is a line-oriented plain text file each of lines represents the 3D position of a reference point in $$X$$.</p>
 
-<p>0.000000 0.000000 0.000000
+<pre><code> 0.000000 0.000000 0.000000
  175.000000 0.000000 0.000000
- 0.000000 100.000000 0.000000</p>
-
-<pre><code>4.2. `data/input{1,2,3}.txt` are also line-oriented plain text files, and each of lines represents the 2D projection of the corresponding 3D reference point in `data/model.txt`. For examp
-le, the first line below is the projection of the first reference point $$(0,0,0)$$ defined in the first line of `data/model.txt`.
+ 0.000000 100.000000 0.000000
 </code></pre>
 
-<p>380.608337 284.673645
+<p>4.2. <code>data/input{1,2,3}.txt</code> are also line-oriented plain text files, and each of lines represents the 2D projection of the corresponding 3D reference point in <code>data/model.txt</code>. For examp
+le, the first line below is the projection of the first reference point $$(0,0,0)$$ defined in the first line of <code>data/model.txt</code>.</p>
+
+<pre><code> 380.608337 284.673645
  263.854279 284.595978
- 377.368225 350.688141</p>
-
-<pre><code>5. Exec the demo program again, and you will get the result.
-
-# Contact
-* [Shohei NOBUHARA](http://vision.kuee.kyoto-u.ac.jp/~nob/)
+ 377.368225 350.688141
 </code></pre>
+
+<ol>
+<li>Exec the demo program again, and you will get the result.</li>
+</ol>
+
+<h1>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h1>
+
+<ul>
+<li><a href="http://vision.kuee.kyoto-u.ac.jp/%7Enob/">Shohei NOBUHARA</a></li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/computer-vision/takahashi2012cvpr">Mirror-based Camera Pose Estimation Using an Orthogonality Constraint</a> is maintained by <a href="https://github.com/computer-vision">computer-vision</a>.</span>
